deploy/backend/k8s/app/deployment.yaml
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - port: 3000
      targetPort: 3000

---
#########################################################
# Ingress for Moleculer API Gateway
#########################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - smart-city-unal.com
      secretName: self-signed-tls
  rules:
    - host: smart-city-unal.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000

---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          # Placeholder for image latest. It should really use the tagged image (date)
          image: nano2766/smart-city-unal:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'
---
#########################################################
# Greeter service - Commented because it is not used
#########################################################
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: greeter
# spec:
#   selector:
#     matchLabels:
#       app: greeter
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: greeter
#     spec:
#       containers:
#         - name: greeter
#           # Placeholder for image latest. It should really use the tagged image (date)
#           image: nano2766/smart:latest
#           imagePullPolicy: Always
#           resources:
#             requests:
#               memory: '512Mi'
#               cpu: '250m'
#             limits:
#               memory: '1Gi'
#               cpu: '500m'
#           envFrom:
#             - configMapRef:
#                 name: common-env
#           env:
#             - name: SERVICES
#               value: greeter

---
#########################################################
# Products service
#########################################################
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: products
# spec:
#   selector:
#     matchLabels:
#       app: products
#   replicas: 1
#   template:
#     metadata:
#       labels:
#         app: products
#     spec:
#       containers:
#         - name: products
#           # Placeholder for image latest. It should really use the tagged image (date)
#           image: nano2766/smart-city-unal:latest
#           imagePullPolicy: 'Always'
#           resources:
#             requests:
#               memory: '512Mi'
#               cpu: '250m'
#             limits:
#               memory: '1Gi'
#               cpu: '500m'
#           envFrom:
#             - configMapRef:
#                 name: common-env
#           env:
#             - name: SERVICES
#               value: products

#########################################################
# Sensors service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensors
spec:
  selector:
    matchLabels:
      app: sensors
  replicas: 1
  template:
    metadata:
      labels:
        app: sensors
    spec:
      containers:
        - name: sensors
          # Placeholder for image latest. It should really use the tagged image (date)
          image: nano2766/smart-city-unal:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'
---
#########################################################
# Users service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  selector:
    matchLabels:
      app: users
  replicas: 1
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          # Placeholder for image latest. It should really use the tagged image (date)
          image: nano2766/smart-city-unal:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'
---
#########################################################
# MongoDB server
#########################################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  serviceName: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          name: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
          readinessProbe:
            tcpSocket:
              port: 27017
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - 'mongo'
                - '--eval'
                - "db.adminCommand('ping')"
            initialDelaySeconds: 15
            periodSeconds: 10
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data

---
#########################################################
# MongoDB service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo

---
#########################################################
# NATS transporter service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
    - port: 4222
      name: nats
      targetPort: 4222

---
#########################################################
# NATS transporter
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.7.0-alpine
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '1Gi'
              cpu: '500m'

          ports:
            - containerPort: 4222
              name: nats
